--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -1,8 +1,9 @@
 <% content_for :title, "Editing room" %>
 
-<h1>Editing room</h1>
-
-<%= render "form", room: @room %>
+<%= turbo_frame_tag dom_id(@room) do %>
+  <h1>Editing room</h1>
+  <%= render "form", room: @room %>
+<% end %>
 
 <br>
 
