--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,11 +1,12 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @room %>
+<%= turbo_frame_tag dom_id(@room), data: { controller: "turbo-frame" } do %>
+  <%= render @room %>
+  <%= link_to "Edit this room", edit_room_path(@room) %>
+<% end %>
 
 <div>
-  <%= link_to "Edit this room", edit_room_path(@room) %> |
   <%= link_to "Back to rooms", rooms_path %>
-
   <%= button_to "Destroy this room", @room, method: :delete %>
 </div>
 
