Improve message creation with Turbo Frames for a better user experience

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -14,4 +14,4 @@
   <%= render @room.messages %>
 </div>
 
-<%= link_to "New Message", new_room_message_path(@room) %>
+<%= turbo_frame_tag "new_message", src: new_room_message_path(@room), target: "_top", data: { controller: "turbo-frame" } %>
