--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,10 +1,13 @@
 <h1> New Message </h1>
-<%= form_with(model: [@room, @message], local: true) do |form| %>
-  <div class="field">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
-    <%= form.submit "Send" %>
-  </div>
+
+<%= turbo_frame_tag "new_message", target: "_top" do %>
+  <%= form_with(model: [@room, @message], local: true) do |form| %>
+    <div class="field">
+      <%= form.label :content %>
+      <%= form.text_field :content %>
+      <%= form.submit "Send" %>
+    </div>
+  <% end %>
 <% end %>
 
 <div>
