--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,10 +1,12 @@
 <h1> New Message </h1>
 
 <%= turbo_frame_tag "new_message", target: "_top" do %>
-  <%= form_with(model: [@room, @message], local: true) do |form| %>
+  <%= form_with(model: [@room, @message],
+                local: true,
+                data: { controller: "reset-form" }) do |form| %>
     <div class="field">
       <%= form.label :content %>
-      <%= form.text_field :content %>
+      <%= form.text_field :content, data: { reset_form_target: "input" } %>
       <%= form.submit "Send" %>
     </div>
   <% end %>
