--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -10,6 +10,7 @@
   <%= button_to "Destroy this room", @room, method: :delete %>
 </div>
 
+<%= turbo_stream_from @room %>
 <div id="messages">
   <%= render @room.messages %>
 </div>
